--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
       </div>
     </div>
   </header>
+  <a href="https://docs.google.com/document/d/1jDV5MTXVxYAxa-lfhk99zg4fp-b5-cIHG-AD_qheP5Q/edit?usp=sharing">Click here to access Google Doc</a>
+
   <div class="pz-content pz-hide-loading">
     <div id="hub-root">
       <div class="pz-section pz-section-filled pz-ad-box">
